<?xml version="1.0"?>
<package format="3">
  <name>amcl_3d</name>
  <version>0.1.0</version>
  <description>AMCL (Adaptive Monte Carlo Localization) in 3D for ROS 2.</description>

  <maintainer email="yukky.saito@gmail.com">Yukihiro Saito</maintainer>
  <author email="yukky.saito@gmail.com">Yukihiro Saito</author>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>eigen</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_export_depend>eigen</build_export_depend>
  <build_export_depend>libpcl-all-dev</build_export_depend>

  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros2bag</exec_depend>
  <exec_depend>rosbag2_transport</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
